1.2.8 unreleased
================

* Made the relative path criterion less prone for funky Acquisition chains.
  This refs http://dev.plone.org/plone/ticket/7686.
  [hannosch]

1.2.7 2009-01-30
================

* Don't assume regular (non-btree) folders for next/previous support.
  [witsch]

* Made Flash files display inline since Flash 10 requires this.  Fixes
  http://dev.plone.org/plone/ticket/8624
  [alecm]

1.2.6 2008-10-06
==================

* Fixed the tidy validation which errored out and rasied the wrong error.
  This closes https://dev.plone.org/plone/ticket/8243.
  [jlagarde, garbas, calvinhp]

* Avoid acquiring getText from parent objects in atct_album_view. This refs
  http://dev.plone.org/plone/ticket/8190.
  [hannosch]

* Already quoted characters in a "Link" url should not be quoted again
  on edit. This closes http://dev.plone.org/plone/ticket/8336.
  [witsch]

* Removed parameters that has to be controlled through CSS from 
  atct_topic_view.pt. This closes http://dev.plone.org/plone/ticket/6803
  [spliter]

* Made it possible to set an empty value to a document text field.  This closes
  http://dev.plone.org/plone/ticket/7324.
  [davisagli]

* Fixed invalid field condition that prevented you from being able to edit
  the "Inherit Criteria" value on a collection once it had been created.
  This closes https://dev.plone.org/plone/ticket/6527.
  [hannosch]

* Changed a msgid for the url field of events to have a distinct value.
  This closes http://dev.plone.org/plone/ticket/8197.
  [hannosch]

* Changed "Contained Collections" text to "Also in this section".
  This closes http://dev.plone.org/plone/ticket/8106.
  [davisagli]

* Changed default topic view to alway show body text (if available) even if the
  collection does not have any results. This closes
  http://dev.plone.org/plone/ticket/8270.
  [dunlapm]
   
1.2.5 2008-04-22
==================

* Remove leading whitespace in hrefs.
  [wichert]
