@@ -30,5 +30,6 @@ setup(name='Products.ATContentTypes',
           'zope.tal',
           'zope.app.container',
           'zope.component',
+          'simplejson',
       ],
       )
